Fixed all the alignment in the first section

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 .header {
     background-color: #1F2937;
@@ -8,11 +9,12 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding-bottom: 100px;
 }
 .logo {
     padding: 16px;
     margin: 0;
-    padding-left: 100px;
+    padding-left: 200px;
     font-size: 18px;
     cursor: pointer;
     display: flex;
@@ -24,35 +26,47 @@ body {
 }
 ul {
     list-style: none;
-    padding-right: 20px;
-    font-size: 17px;
+    padding-right: 150px;
+    font-size: 18px;
     display: flex;
-    gap: 10px;
+    gap: 5px;
     justify-content: flex-end;
     flex-direction: row;
     margin: 0;
+    margin-top: -65px;
 }
 a {
     text-decoration: none;
-    color: white;
+    color: rgb(210, 205, 205);
     padding: 30px;
 }
 a:hover {
     background-color: #475466;
 }
 .content {
-    margin-left: 100px;
+    margin-left: 200px;
     font-size: 25px;
     display: flex;
     flex-direction: column;
+    max-width: 370px;
+}
+.heading {
+    margin: 0;
+    padding-left: 200px;
+    font-size: 50px;
+    max-width: 350px;
+    padding-top: 80px;
 }
 .content p {
     font-size: 18px;
+    color: rgb(232, 226, 226);
 }
-img {
-    width: 450px;
-    height: 330px;
-    margin-left: 600px;
+.header img {
+    width: 550px;
+    height: 280px;
+    padding-left: 500px;
+    padding-bottom: 30px;
+    margin-top: -300px;
 }
 .sign-1 {
     background-color: #3882F6;
